--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "popper.js": "^1.16.1",
     "rxjs": "~7.4.0",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.4.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
